--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+
 <body>
-    <form action="/file/download" method="post" enctype="multipart/form-data">
+    <form action="/file/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="file">
         <button>Upload</button>
     </form>
 </body>
+
 </html>
